--- a/sid-bar/style/style.css
+++ b/sid-bar/style/style.css
@@ -1,25 +1,100 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 *{
   margin: 0;
   padding: 0;
 }
 body{
-display:  flex;
-height: 100vh;}
-
-div{
-  background-color: rgb(159, 88, 1);
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  min-height: 100%;
+  font-family: 'Poppins', sans-serif;
+  background: #000000;
+}
+/*Organizando o container inteiro*/
+.container{
+ position: relative;
+ height: 100vh;
+ width: 70px;
+ background-color: rgb(34, 33, 33);
+ box-shadow: 10px 0 0 ;
+ border-right: 10px solid rgb(7, 94, 234);
+ overflow-x: hidden;
+ transition: 0.5s;
+}
+.container:hover{
+  width: 300px;
+}
+/*Organizando a lista e suas atribuições*/
+.container ul{
   position: absolute;
-  height: 100%;
-  width: 100px;
+  list-style: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-left: 5px;
+  padding-top: 30px;
+}
+.container ul >li{
+  position: relative;
+  list-style: none;
+  width: 100%;
+  border-bottom-left-radius: 20px;
+  border-top-left-radius: 20px;
+  
+}
+.container ul >li > a{
+  display: flex;
+  width: 100%;
+  color: white;
+  text-decoration: none;
 
-  transition-property: all;
-  transition-duration: 200ms;
-  transition-timing-function: ease-out;
+}
+a > span.icon{
+  position: relative;
+  display: block;
+  min-width: 60px;
+  height: 40px;
   text-align: center;
+  line-height: 75px;
+}
+a > span.icon ion-icon{
+  position: relative;
+  font-size: 1.5em;
+  z-index: 1;
+}
+a > span.title{
+position: relative;
+display: block;
+padding-left: 10px;
+height: 60px;
+line-height: 60px;
+white-space: nowrap;
+}
+.container ul li.active{
+  background-color: rgb(7, 94, 234);
+}
+.container ul li.active a::before {
+  content: "";
+  position:absolute ;
+  top: -30px;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  background: rgb(34, 33, 33);
+  border-radius: 50%;
+  box-shadow: 15px 15px 0 rgb(7, 94, 234);
+}
+.container ul li.active a::after {
+  content: "";
+  position:absolute ;
+  bottom: -30px;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  background: rgb(34, 33, 33);
+  border-radius: 50%;
+  box-shadow: 15px -15px 0 rgb(7, 94, 234);
 }
 
-div:hover{
-  opacity: 1;
-  left: 100px;
-}
